--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
             display: inline-block;
             text-align: left;
             margin-bottom: 20px;
+            width: 80%; /* This will make it aligned with other sections */
         }
         footer {
             margin-top: 20px;
             color: #777;
+        }
+        ul {
+            padding-left: 20px;
+            text-align: left;
         }
     </style>
 </head>
@@ -99,4 +104,5 @@
 
 </body>
 </html>
+
 
