--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 
     <div class="contact">
         <h2>Contact Support</h2>
-        <p>If you have any questions or need assistance with Watch Fido, please reach out to our support team.</p>
-        <p><strong>Email:</strong> <a href="mailto:ChronoCodeDevelopment@outlook.com">ChronoCodeDevelopment@outlook.com</a></p>
-        <p>If you have feature recommendations or find a bug or issue within the app, we’d love to hear from you! Please don't hesitate to email us with your thoughts. Your feedback helps us continue improving Watch Fido and provide the best experience for you and your pets.</p>
+        <p>Got questions or need a hand with Watch Fido? Our support team is here to help!</p>
+        <p><strong>Email us at:</strong> <a href="mailto:ChronoCodeDevelopment@outlook.com">ChronoCodeDevelopment@outlook.com</a></p>
+        <p>Whether you’ve discovered a bug, have a brilliant feature idea, or just want to share your thoughts, we’re all ears! Your feedback is like treats for us—it helps keep Watch Fido growing and improving to give you and your pets the best experience possible.</p>
+        <p>Thank you for supporting independent developers like us! We couldn’t do it without you (and your furry friends)!</p>
     </div>
 </div>
 
