--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-<img src="Newfie_Wheres_fido_1024x1024.jpeg" alt="Watch Fido Support Logo">
+<img src="Watch_Fido_1024x1024.jpeg" alt="Watch Fido Support Logo">
 
 <header>
     <h1>Watch Fido Support</h1>
